syntax = "proto3";

option csharp_namespace = "DeviceManagementService.Protos";

service DeviceChecker {
  rpc CheckDevice (DeviceRequest) returns (DeviceResponse);
}

message DeviceRequest {
  string deviceId = 1;
  string macAddress = 2;
}

message DeviceResponse {
  bool isValid = 1;
  string message = 2;
}
